--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </header>
 <main class="main">
     <section class="intro">
-        <h1 class="intro-title">PORSCHE</h1>
+        <h1 class="intro-title">PORSCHE 911</h1>
         <a href="#" class="intro-link">more</a>
     </section>
     <section class="porche">
@@ -35,7 +35,6 @@
                 <p class="porche-left-text text1">
                     The Porsche 911 GT3 R (or 911 GT3 R5) is a specialized race car designed for participation in various racing series, including GT championships and other international competitions.
                 </p>
-
                 <p class="porche-left-text">It represents an enhanced version of the legendary Porsche 911, with a reinforced structure, improved aerodynamic characteristics, and a powerful engine to ensure maximum performance on the track.</p>
             </div>
             <div class="porche-right">
